# autumn_length

./: .Rprofile  .gitignore  README.html  README.md  _quarto.yml  index.qmd  outputs  project_paths.py  pyproject.toml  平均気温分布.R  平均気温分布v2.R  平均気温分布v2.qmd.R  長期トレンド除去.R
.github/workflows/: quarto-render.yml
data/: raw
data/processed/: ._df_merged.rds  b47590_4season_1982_2022.csv  b47662_4season_1982_2022.csv  b47772_4season_1982_2022.csv  b47807_4season_1982_2022.csv  df2.rds  df2_仙台.rds  df_merged_仙台.rds  生物季節観測_仙台_DOY_Temp_ENSO.csv  生物季節観測_大阪_DOY_Temp_ENSO.csv  生物季節観測_山形_DOY_Temp_ENSO.csv  生物季節観測_東京_DOY_Temp_ENSO.csv  生物季節観測_福岡_DOY_Temp_ENSO.csv
docs/: index.html  search.json
docs/notebooks/python/: Untitled.html  plot_20250326_仙台他.html  二季化検証.html  体感温度.html  体感温度による秋判定-対象月制限.html  体感温度による秋判定.html  春・秋の長さ.html  気温勾配.html  生物季節観測r2.html  (+5 more)
docs/reports/: .Rprofile  平均気温分布v2.html  生物季節観測_長期トレンド除去.html  生物季節観測_長期トレンド除去.qmd  生物季節観測相関.html
notebooks/python/: Untitled.ipynb  plot_20250326_仙台他.ipynb  二季化検証.ipynb  体感温度.ipynb  体感温度による秋判定-対象月制限.ipynb  体感温度による秋判定.ipynb  春・秋の長さ.ipynb  気温勾配.ipynb  生物季節観測r2.ipynb  生物季節観測r3.ipynb  秋の長さ_体感温度.ipynb  秋期間_移動平均.ipynb  秋期間図化.ipynb  閾値分析_再現.ipynb
notebooks/r/: ENSO時の検定.R  ENSO時の検定v2.R  ENSO時の検定v3.R  Theme.R  plot_fisher_quad.R  plot_scatter_facet.R  scales.R  すすき開花比較.R  四季の長さ検定MK.R  生物季節観測による秋の長さ.R  秋の長さ図化.R  長期トレンド除去.R
reports/: _平均気温分布v2.qmd.r  _平均気温分布から見た季節の長さ.qmd  header.tex  styles_rep.css  styles_slide.css  平均気温分布v2.qmd  生物季節観測_長期トレンド除去.html  生物季節観測_長期トレンド除去.qmd  生物季節観測相関.qmd
scripts/r/: 01_correlation_analysis.R
(+355 files in other folders)
